--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "SaaS project that enables user to make their communities and add members to it.",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Hokam Singh",
